--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,8 @@ repositories {
 
 dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
