--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
